--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ var/
 *.egg-info/
 .installed.cfg
 *.egg
+venv/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -55,3 +56,9 @@ docs/_build/
 
 # PyBuilder
 target/
+
+# Vagrant builds
+.vagrant/
+
+# Gists
+.gists/
